# databaseManagement

./: Cargo.toml  PACKAGING.md  README.md  mangabase_connections.json
scripts/: build-macos-dmg.sh  build-windows.ps1
src/: main.rs
src/app/: actions.rs  background.rs  palette.rs  state.rs  ui_overlays.rs  ui_shell.rs  ui_workspace.rs
src/data/: engines.rs  live.rs  sql.rs  storage.rs  transport.rs  worker.rs
src/models/: connection.rs  demo.rs  query_state.rs
src/support/: forms.rs  parsing.rs  query_tools.rs  schema_diagram.rs  theme.rs
