[package]
name = "sharingan"
version = "0.1.0"
edition = "2024"

[package.metadata.bundle]
name = "Sharingan"
identifier = "com.sharingan.desktop"
icon = ["assets/sharingan-square.png"]
category = "Developer Tool"
short_description = "Native database client for macOS and Windows"
long_description = "Sharingan is a native Rust desktop database client with multiple connections, SSH tunneling, tabs, filters, autocomplete, and row editing."

[dependencies]
eframe = "0.31"
egui_extras = "0.31"
mysql = "26"
postgres = "0.19"
clickhouse = "0.13"
duckdb = { version = "1.1", features = ["bundled"] }
rusqlite = "0.33"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
libc = "0.2"
regex = "1.12.3"
